k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moon-insurance-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "mooninsurance.example.com"
      http:
        paths:
          - path: /agent(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: agent-service # Matches the service defined in the agent repo’s k8s folder
                port:
                  number: 80
          - path: /product(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: product-service # From product service repo
                port:
                  number: 80
          - path: /integration(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: integration-service # From integration service repo
                port:
                  number: 80
          - path: /notification(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: notification-service # From notification service repo
                port:
                  number: 80
          - path: /aggregator(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aggregator-service # From aggregator service repo
                port:
                  number: 80
